language/move-lang/tests/move_check/typing/block_with_statements_invalid.exp
error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:4:29 ───
   │
 4 │         ({ let x = 0; x } : bool);
   │                             ^^^^ Invalid type annotation
   ·
 4 │         ({ let x = 0; x } : bool);
   │                    - The type: integer
   ·
 4 │         ({ let x = 0; x } : bool);
   │                             ---- Is not compatible with: 'bool'
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:5:30 ───
   │
 5 │         ({ let x = 0; &x } : u64);
   │                              ^^^ Invalid type annotation
   ·
 5 │         ({ let x = 0; &x } : u64);
   │                       -- The type: '&{integer}'
   ·
 5 │         ({ let x = 0; &x } : u64);
   │                              --- Is not compatible with: 'u64'
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:6:40 ───
   │
 6 │         ({ let y = 0; &mut (y + 1) } : ());
   │                                        ^^ Invalid type annotation
   ·
 6 │         ({ let y = 0; &mut (y + 1) } : ());
   │                       ------------ The type: '&mut {integer}'
   ·
 6 │         ({ let y = 0; &mut (y + 1) } : ());
   │                                        -- Is not compatible with: '()'
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:7:9 ───
   │
 7 │         ({ let r = { let r = R {}; r }; r } : R);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 7 │         ({ let r = { let r = R {}; r }; r } : R);
   │                                               - The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:8:45 ───
   │
 8 │         ({ let x = 0; (x, false, false) } : (u64, bool));
   │                                             ^^^^^^^^^^^ Invalid type annotation
   ·
 8 │         ({ let x = 0; (x, false, false) } : (u64, bool));
   │                       ----------------- The type: '({integer}, bool, bool)'
   ·
 8 │         ({ let x = 0; (x, false, false) } : (u64, bool));
   │                                             ----------- Is not compatible with: '(u64, bool)'
   │

